# rules_go_runfiles_repro

./: BUILD.bazel  README.md  WORKSPACE  go_cat.go  parent.py  parent_output_test.sh  sample_MANIFEST
.github/workflows/: blank.yml  ci.yml
